@@ -11,6 +11,7 @@ requires       'Exporter'                => 0;
 requires       'Padre'                   => '0.21';
 requires       'Class::Autouse'          => '1.26';
 requires       'JavaScript::Beautifier'  => '0.03';
+requires       'JavaScript::Minifier::XS';
 
 test_requires  'Test::More'              => '0.47';
 test_requires  'Test::NeedsDisplay'      => '1.05';
