@@ -1,3 +1,4 @@
 v0.22 2008.12.18
     First release separately from Padre
     add JavaScrip::Beautifier
+    add JavaScript::Minifier::XS
